[package]
name = "signature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12" , features = ["derive"] }
rand_core = {version = "0.6.3", features = ["getrandom"]}
hex = "0.4.3"
k256 = "0.10.4"
